deafio-dia-do-rock/src/index.css
.light {
    --scrollbar-track: #d1dae5;
    --scrollbar-thumb: #acb1b6;
}

.dark {
    --scrollbar-track: #131219;
    --scrollbar-thumb: #27262F;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

.leaflet-container {
  width: 100%;
  height: 100%;
}

*::-webkit-scrollbar {
  width: 12px;
}

*::-webkit-scrollbar-track {
    background: var(--scrollbar-track);
}

*::-webkit-scrollbar-thumb {
    background-color: var(--scrollbar-thumb);
    border-radius: 20px;
    border: 3px solid var(--scrollbar-track);
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

